ajout gap and fix flex

--- a/style.css
+++ b/style.css
@@ -255,6 +255,11 @@ span .ecriture {
   flex-direction: column;
   width: 100%;
 }
+.competence{
+  width: 100%;
+  
+  
+}
 .competence-title {
   border-bottom: red 2px solid;
   padding: 15px 8px;
@@ -263,6 +268,7 @@ span .ecriture {
   font-weight:bold;
 }
 .compétence-range {
+
   background: linear-gradient(180deg, #daf1cb 33%, #bfdeaf 33%),
     linear-gradient(180deg, #bfdeaf 66%, #50864b 66%);
   position: relative;
@@ -354,15 +360,33 @@ span .ecriture {
   .skill {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
+    gap: 3.5rem;
   }
 
   .compétences {
     grid-column: 1 / span 2;
     grid-row: 1 / span 2;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    padding: 2.25rem 0;
   }
+  .competence-title {
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    border-right: red 2px solid;
+    border-bottom: none;
+    padding: 15px 4px;
+    margin: 0 1rem 0 0;
+  }
+  .competence-list{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+   
+  }
+
   .hobbies {
     grid-column: 3 / span 1;
     grid-row: 1 / span 1;
@@ -401,5 +425,19 @@ span .ecriture {
   grid-row: 2 / span 1; */
 
     width: 100%;
+  }
+}
+@media (min-width: 700px) {
+  .competence {
+    display: flex;
+    justify-content:space-between
+    
+  }
+  .compétence-name{
+    width: 30%;
+  }
+  .compétence-range {
+    width: 70%;
+    
   }
 }
